cleaned up moderator,admin cmds